--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://edward-tobilko.github.io/theWay-of-theSamurai",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -28,6 +30,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
