set new changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://edward-tobilko.github.io/theWay-of-theSamurai",
+  "homepage": "https://edward-tobilko.github.io/linkedIn-clone",
   "name": "client",
   "version": "0.1.0",
   "private": true,
