--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,9 +18,11 @@
     "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
+    "formik": "^2.4.3",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.8.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.10.0",
@@ -29,7 +32,8 @@
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "predeploy": "npm run build",
