--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.8",
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "uuid": "^8.3.2",
