--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.24",
@@ -14,13 +13,13 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
     "formik": "^2.4.3",
     "gh-pages": "^5.0.0",
-    "jest": "^27.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
@@ -29,12 +28,12 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.1",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.8",
     "styled-components": "^5.3.9",
-    "ts-jest": "^29.1.1",
     "typescript": "^4.9.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
@@ -45,8 +44,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -73,6 +71,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/react": "^14.0.0",
     "@types/redux-mock-store": "^1.0.3"
   }
 }
