--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
     "formik": "^2.4.3",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
@@ -74,6 +73,7 @@
   "devDependencies": {
     "@testing-library/dom": "^9.3.1",
     "@testing-library/react": "^14.0.0",
-    "@types/redux-mock-store": "^1.0.3"
+    "@types/redux-mock-store": "^1.0.3",
+    "gh-pages": "^6.0.0"
   }
 }
