--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@testing-library/dom": "^9.3.1",
     "@testing-library/react": "^14.0.0",
     "@types/redux-mock-store": "^1.0.3",
+    "@types/yup": "^0.32.0",
     "gh-pages": "^6.0.0"
   }
 }
