--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
-    "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
@@ -29,9 +28,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
-    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.1",
-    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.8",
     "styled-components": "^5.3.9",
@@ -76,6 +73,9 @@
     "@testing-library/react": "^14.0.0",
     "@types/redux-mock-store": "^1.0.3",
     "@types/yup": "^0.32.0",
-    "gh-pages": "^6.0.0"
+    "axios-mock-adapter": "^1.22.0",
+    "gh-pages": "^6.0.0",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
