--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
+    "browserslist": "^4.22.1",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
