--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
   "jest": {
     "transformIgnorePatterns": [
       "node_modules/(?!(react-leaflet|@react-leaflet|d3-*|axios))"
-    ]
+    ],
+    "testTimeout": 30000,
+    "maxWorkers": 1
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.1",
