--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "es2015",
     "downlevelIteration": true,
+    "tsBuildInfoFile": "./node_modules/tsbuildinfo/cache",
+    "incremental": true,
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
