--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.8",
     "styled-components": "^5.3.9",
-    "typescript": "^4.9.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
@@ -81,6 +80,7 @@
     "axios-mock-adapter": "^1.22.0",
     "gh-pages": "^6.0.0",
     "react-test-renderer": "^18.2.0",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "typescript": "^5.3.3"
   }
 }
